# bridge_c_core

./: .gitignore  README.md  pyproject.toml
data/: messages.jsonl
docs/: ARCHITECTURE.md  INSTALL.md  INTEGRATION.md  PROTOCOL.md  USAGE.md
src/bridge_c_core/: __init__.py  chat_webapp.py  cli.py  client.py  daemon.py  messages_log.py  record_protocol.py  settings.py
src/bridge_c_core/web_static/: index.html
tests/: test_client_http.py  test_default_base_url.py  test_messages_log.py  test_notify_webhook.py  test_record_protocol.py  test_run_daemon_loop.py  test_write_local_item.py
