[project]
name = "bridge-c-core"
version = "0.1.1"
description = "C 端守护进程通用内核：协议无关的轮询/落盘/客户端基类，供各公司 *_bridge_c 复用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27,<1"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
