[project]
name = "bridge-c-core"
version = "0.1.7"
description = "C 端守护进程通用内核：协议无关的轮询/落盘/客户端基类 + 本机消息看板 Web UI，供各公司 *_bridge_c 复用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bridge-c-chat-web = "bridge_c_core.chat_webapp:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bridge_c_core = ["web_static/*.html"]
